scripts/nullness/annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8.txt
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/parse/PopAllMatchesTest.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/logic/LogikusMediator.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/query/JaqlMediator.java:11: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/sling/SlingMediator.java:15: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/sling/SlingPanel.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/parse/PopAllMatchesTest.java:26: error: cannot find symbol
	@Initializer public void terminal() {
	 ^
  symbol:   class Initializer
  location: class PopAllMatchesTest
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/logic/LogikusMediator.java:143: error: cannot find symbol
	@Initializer public void initialize(JButton proveNextButton, JButton proveRestButton, JButton haltButton, JButton clearProgramButton, JButton clearResultsButton, JTextArea programArea, JTextArea resultsArea, JTextArea queryArea) {
	 ^
  symbol:   class Initializer
  location: class LogikusMediator
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/query/JaqlMediator.java:88: error: cannot find symbol
	@Initializer public void initialize(JButton goButton, JButton clearButton, JTextArea queryArea, JTextArea resultArea, JTextArea metadataArea) {
	 ^
  symbol:   class Initializer
  location: class JaqlMediator
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/sling/SlingPanel.java:32: error: cannot find symbol
	@Initializer protected void calculateCorners(double aspectRatio) {
	 ^
  symbol:   class Initializer
  location: class SlingPanel
../annotator/url146c819f25_jlink_Parse4SJM_tgz-pJ8-sjm_examples_book_robot_ShowRobotRefactoredJ8/src/sjm/examples/book/sling/SlingMediator.java:158: error: cannot find symbol
	@Initializer public void initialize(JButton goSource, JButton haltSource, JButton clearSource, JSlider s1, JSlider s2, JTextArea programArea, JTextArea messageArea, SlingPanel plotPanel) {
	 ^
  symbol:   class Initializer
  location: class SlingMediator
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
